# raytracing

./: .gitignore  CMakeLists.txt  README.md  hittable.h  hittable_list.h  img.ppm  main.cpp  material.h  test.cpp  test.out  utils.h  vec3.h
src/: camera.h  color.h  main.cpp  ray.h  sphere.h  vec3.h  write_img.h
src/threading/: threadpool.cpp
threading/: threadpool.h
